--- a/node/app/suiibell-front/package.json
+++ b/node/app/suiibell-front/package.json
@@ -19,7 +19,9 @@
     "framer-motion": "^6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "remix-auth": "^3.2.2",
+    "remix-auth-form": "^1.1.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.5.1",
