--- a/node/dockerfile
+++ b/node/dockerfile
@@ -1,5 +1,31 @@
-FROM node:18
+FROM --platform=linux/amd64 node:18 
 
+# cp local data
 ADD ./app /app
+
+# Install idea plugins
+RUN apt-get update && apt-get install -y git curl unzip procps time
+ARG USERNAME=intellij
+ARG GROUPNAME=intellij
+ARG UID=1001
+ARG GID=1001
+ARG PROJDIR=/app/suiibell-front
+
+ARG IDEURL=https://download.jetbrains.com/idea/ideaIU-2021.3.2.tar.gz
+
+RUN groupadd -g $GID $GROUPNAME && \
+  useradd -m -s /bin/bash -u $UID -g $GID $USERNAME
+USER $USERNAME
+WORKDIR /home/$USERNAME
+
+
+RUN curl -fsSL -o ide.tar.gz $IDEURL && \
+  mkdir ide && \
+  tar xfz ide.tar.gz --strip-components=1 -C ide && \
+  rm ide.tar.gz
+
+RUN time ide/bin/remote-dev-server.sh installPlugins $PROJDIR com.intellij.ja
+
+RUN time ide/bin/remote-dev-server.sh installPlugins $PROJDIR com.intellij.ja
 
 EXPOSE 3000
