--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 # id
 id_rsa
 
+
+# .idea
+.idea
+
+
 # Logs
 logs
 *.log
@@ -108,3 +113,4 @@ dist
 
 # TernJS port file
 .tern-port
+Go/app/suiibell-backend/.idea/workspace.xml
