--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     container_name: postgre
     build: ./DB/
     volumes:
-      - ./DB/init:/docker-entrypoint-initdb.d
+      - ./DB/init/:/docker-entrypoint-initdb.d
     env_file: ./DB/.env
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
