--- a/Go/dockerfile
+++ b/Go/dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=linux/amd64 golang:1.18.2
+FROM --platform=linux/amd64 golang:1.18.3
 
 
 # cp local data
@@ -31,4 +31,4 @@ RUN time ide/bin/remote-dev-server.sh installPlugins $PROJDIR com.intellij.ja
 
 
 
-EXPOSE 8000
+EXPOSE 9000 8000
